tests/transpiler/x/php/partial_application.error
run: exit status 255

Fatal error: Uncaught ArgumentCountError: Too few arguments to function {closure:/workspace/mochi/tests/transpiler/x/php/partial_application.php:2}(), 1 passed in /workspace/mochi/tests/transpiler/x/php/partial_application.php on line 5 and exactly 2 expected in /workspace/mochi/tests/transpiler/x/php/partial_application.php:2
Stack trace:
#0 /workspace/mochi/tests/transpiler/x/php/partial_application.php(5): {closure:/workspace/mochi/tests/transpiler/x/php/partial_application.php:2}(5)
#1 {main}
  thrown in /workspace/mochi/tests/transpiler/x/php/partial_application.php on line 2
